--- a/api-service/build.gradle
+++ b/api-service/build.gradle
@@ -21,14 +21,19 @@ configurations {
 
 repositories {
 	mavenCentral()
+	flatDir {
+		dirs 'lib'  // 👈 tells Gradle to look inside /libs
+	}
 }
 
 dependencies {
+	implementation name: 'common-lib-1.0.0'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'org.springframework.kafka:spring-kafka'
 }
 
 tasks.named('test') {
